--- a/pca.ipynb
+++ b/pca.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# PCA and Eigenfaces\n",
     "\n",
-    "In this notebook, we will test the convolution layer implementation from `layers.py` and then test the CNN implementation from `cnn.py` on the MNIST dataset."
+    "In this notebook, we will generate eigenfaces for a face images dataset."
    ]
   },
   {
